force-app/main/default/objects/affectlayer__Moment__c/affectlayer__Moment__c.object-meta.xml
<CustomObject>
    <label>Moment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Moments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>