force-app/main/default/objects/affectlayer__Moment__c/fields/affectlayer__Length__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Length__c</fullName>
    <description>seconds</description>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>