force-app/main/default/objects/affectlayer__Moment__c/fields/affectlayer__MomentId__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__MomentId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id</label>
    <type>Text</type>
</CustomField>