force-app/main/default/objects/affectlayer__Moment__c/fields/affectlayer__SpeakerContact__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__SpeakerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact (for prospect-side utterances)</description>
    <label>Speaker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Moments</relationshipLabel>
    <relationshipName>Moments</relationshipName>
    <type>Lookup</type>
</CustomField>