force-app/main/default/objects/affectlayer__Moment__c/fields/affectlayer__SpeakerUser__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__SpeakerUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User (for rep-side utterances)</description>
    <label>Speaker User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Moments</relationshipName>
    <type>Lookup</type>
</CustomField>