force-app/main/default/objects/affectlayer__Moment__c/fields/affectlayer__Start__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Start__c</fullName>
    <description>seconds</description>
    <label>Start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>