force-app/main/default/objects/affectlayer__Moment__c/fields/affectlayer__Title__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Title__c</fullName>
    <formula>affectlayer__SpeakerUser__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>