force-app/main/default/objects/affectlayer__Moment__c/fields/affectlayer__TrackerCategory__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__TrackerCategory__c</fullName>
    <label>Tracker Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>