force-app/main/default/objects/affectlayer__Moment__c/fields/affectlayer__TrackerDescription__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__TrackerDescription__c</fullName>
    <label>Tracker Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>