force-app/main/default/objects/affectlayer__Moment__c/fields/affectlayer__TrackerDisposition__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__TrackerDisposition__c</fullName>
    <label>Tracker Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>