force-app/main/default/objects/affectlayer__Moment__c/fields/affectlayer__TrackerID__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__TrackerID__c</fullName>
    <label>TrackerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>