force-app/main/default/objects/affectlayer__Moment__c/fields/affectlayer__URL__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__URL__c</fullName>
    <description>Link to utterance.
A recording page with the start parameter set to the start of the utterance?</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>